Fix code to wrap around instead of scroll

--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -12,3 +12,7 @@
     text-align: center;
     display: block;
 }
+
+code[class*=language-], pre[class*=language-]{
+    white-space: pre-wrap;
+}
